<resources>
    <string name="app_name">calculator</string>
    <string name="Login_name">Login</string>
    <string name="Username_name">Username</string>
    <string name="Password_name">Password</string>
    <string name="message">Not yet registered? SignUp Now</string>
    <string name="Add_Account">Add Account</string>
    <string name="SignUp">Sign Up</string>
    <string name="Google">Sign up with Google</string>
    <string name="nameApp">My Calculator</string>
    <string name="OpenNav"> Open Navigation drawer</string>
    <string name="CloseNav">Close Navigation drawer</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>



</resources>